Slides 08: EKF-SLAM Add some notes

--- a/teoricas/teorica_08/src/ekf_slam.tex
+++ b/teoricas/teorica_08/src/ekf_slam.tex
@@ -1204,8 +1204,8 @@
     \note{Información extraída de https://www.ipb.uni-bonn.de/html/teaching/photo12-2021/2021-pho2-16-ekf-slam.pptx.pdf}
 
     \begin{itemize}
-    \item The determinant of any sub-matrix of the map covariance matrix decreases monotonically
-    \item New landmarks are initialized with maximum uncertainty
+    \item The \textbf{determinant} of any sub-matrix of the map covariance matrix \textbf{decreases monotonically}
+    \item New landmarks are initialized with \textbf{maximum uncertainty}
     \end{itemize}
 
     \begin{center}
