Slides 06: Particle Filter: minor changes

--- a/teoricas/teorica_06/src/particle_filter.tex
+++ b/teoricas/teorica_06/src/particle_filter.tex
@@ -205,7 +205,7 @@
     
 \begin{frame}
     \frametitle{Filtro de Partículas para problemas de estimación de estado dinámico}
-    \note{Información extraída de Vídeo de Cyrill Stachniss https://youtu.be/MsYlueVDLI0}
+    \note{Información extraída del Vídeo de Cyrill Stachniss https://youtu.be/MsYlueVDLI0}
 
     \begin{itemize}
         \item PF implementa un Filtro Bayesiano Recursivo (realiza un Prediction step y un Correction step)
